# alive_reversing

./: .clang-format  .clangformat  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml  clangformat_everthing.sh  get_sdl2_win32.ps1  options.cmake
Source/AliveDll/: CMakeLists.txt  dllmain.cpp
Source/AliveDllAE/: CMakeLists.txt  dllmain.cpp
Source/AliveDllAO/: CMakeLists.txt  dllmain.cpp
Source/AliveExe/: CMakeLists.txt  Exe.cpp  resource.h  resource.rc
Source/AliveLib/: Abe.cpp  Abe.cpp~RF456031.TMP  Abe.hpp  AbilityRing.cpp  AbilityRing.hpp  Alarm.cpp  Alarm.hpp  AmbientSound.cpp  AmbientSound.hpp  Animation.cpp  Animation.hpp  BackgroundAnimation.cpp  BackgroundAnimation.hpp  BackgroundMusic.cpp  BackgroundMusic.hpp  BaseAliveGameObject.cpp  BaseAliveGameObject.hpp  BaseAnimatedWithPhysicsGameObject.cpp  BaseAnimatedWithPhysicsGameObject.hpp  BaseBomb.cpp  BaseBomb.hpp  BaseGameObject.cpp  BaseGameObject.hpp  BirdPortal.cpp  BirdPortal.hpp  BitField.hpp  Blood.cpp  Blood.hpp  Bone.cpp  Bone.hpp  BoomMachine.cpp  BoomMachine.hpp  Bullet.cpp  Bullet.hpp  BulletShell.cpp  BulletShell.hpp  CMakeLists.txt  CameraSwapper.cpp  CameraSwapper.hpp  ChantSuppressor.cpp  (+325 more)
Source/AliveLib/Sound/: Midi.cpp  Midi.hpp  PsxSpuApi.cpp  PsxSpuApi.hpp  Reverb.cpp  Reverb.hpp  SDLSoundBuffer.cpp  SDLSoundBuffer.hpp  SDLSoundSystem.cpp  SDLSoundSystem.hpp  Sound.cpp  Sound.hpp  SoundDSound.cpp  SoundDSound.hpp  SoundSDL.cpp  SoundSDL.hpp
Source/AliveLibAE/: Abe.cpp  Abe.hpp  AbilityRing.cpp  AbilityRing.hpp  AirExplosion.cpp  AirExplosion.hpp  Alarm.cpp  Alarm.hpp  AmbientSound.cpp  AmbientSound.hpp  Animation.cpp  Animation.hpp  AnimationBase.cpp  AnimationBase.hpp  AnimationCallBacks.cpp  AnimationCallBacks.hpp  AnimationUnknown.cpp  AnimationUnknown.hpp  BackgroundAnimation.cpp  BackgroundAnimation.hpp  BackgroundMusic.cpp  BackgroundMusic.hpp  BaseAliveGameObject.cpp  BaseAliveGameObject.hpp  BaseAnimatedWithPhysicsGameObject.cpp  BaseAnimatedWithPhysicsGameObject.hpp  BaseBomb.cpp  BaseBomb.hpp  BaseGameObject.cpp  BaseGameObject.hpp  BirdPortal.cpp  BirdPortal.hpp  BirdPortalTerminator.cpp  BirdPortalTerminator.hpp  Blood.cpp  Blood.hpp  Bone.cpp  Bone.hpp  BoneBag.cpp  BoneBag.hpp  (+363 more)
Source/AliveLibAE/Renderer/: DirectX9Renderer.cpp  DirectX9Renderer.hpp  GLShader.cpp  GLShader.hpp  IRenderer.cpp  IRenderer.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  PaletteCache.hpp  SoftwareRenderer.cpp  SoftwareRenderer.hpp  StbImageImplementation.hpp  TextureCache.hpp  cam_fg1_shader.h  cam_fg1_shader.hlsl  flat_shader.h  pixel_shader.h  pixel_shader.hlsl
Source/AliveLibAE/Sound/: Midi.cpp  Midi.hpp  PsxSpuApi.cpp  PsxSpuApi.hpp  Reverb.cpp  Reverb.hpp  SDLSoundBuffer.cpp  SDLSoundBuffer.hpp  SDLSoundSystem.cpp  SDLSoundSystem.hpp  Sound.cpp  Sound.hpp  SoundDSound.cpp  SoundDSound.hpp  SoundSDL.cpp  SoundSDL.hpp
Source/AliveLibAO/: Abe.cpp  Abe.hpp  AbilityRing.cpp  AbilityRing.hpp  AirExplosion.cpp  AirExplosion.hpp  Alarm.cpp  Alarm.hpp  AmbientSound.cpp  AmbientSound.hpp  Animation.cpp  Animation.hpp  AnimationBase.cpp  AnimationBase.hpp  AnimationCallBacks.cpp  AnimationCallBacks.hpp  AnimationUnknown.cpp  AnimationUnknown.hpp  BackgroundAnimation.cpp  BackgroundAnimation.hpp  BackgroundGlukkon.cpp  BackgroundGlukkon.hpp  BackgroundMusic.cpp  BackgroundMusic.hpp  BaseAliveGameObject.cpp  BaseAliveGameObject.hpp  BaseAnimatedWithPhysicsGameObject.cpp  BaseAnimatedWithPhysicsGameObject.hpp  BaseBomb.cpp  BaseBomb.hpp  BaseGameObject.cpp  BaseGameObject.hpp  Bat.cpp  Bat.hpp  BeeNest.cpp  BeeNest.hpp  BeeSwarm.cpp  BeeSwarm.hpp  BeeSwarmHole.cpp  BeeSwarmHole.hpp  (+326 more)
Source/AliveLibCommon/: AnimResources.cpp  AnimResources.hpp  BaseGameAutoPlayer.cpp  BaseGameAutoPlayer.hpp  BaseGameObjectCommon.cpp  BaseGameObjectCommon.hpp  BitField.hpp  CMakeLists.txt  CamDecompressor.cpp  CompressionType_4Or5.cpp  CompressionType_4Or5.hpp  ExportHooker.cpp  ExportHooker.hpp  ExternalAssets.cpp  ExternalAssets.hpp  FG1Reader.hpp  FatalError.cpp  FatalError.hpp  FixedPoint_common.hpp  Function.cpp  Function.hpp  FunctionFwd.hpp  Masher.cpp  Masher.hpp  PSXADPCMDecoder.cpp  PSXADPCMDecoder.h  PSXMDECDecoder.cpp  PSXMDECDecoder.h  PathDataExtensionsTypes.hpp  Primitives_common.cpp  Primitives_common.hpp  Psx_common.hpp  PtrStream.hpp  Sys_common.cpp  Sys_common.hpp  Types.hpp  W32CrashHandler.hpp  logger.hpp  masher_tables.hpp  pch_shared.h  (+4 more)
Source/AliveLibCommon/audio/: ADSR.hpp  Exceptions.hpp  Interpolation.cpp  Interpolation.hpp  MidiPlayer.cpp  MidiPlayer.hpp  Reverb.cpp  Reverb.hpp  SequencePlayer.cpp  SequencePlayer.hpp  Sequencer.cpp  Sequencer.hpp  Soundbank.cpp  Soundbank.hpp  Stream.cpp  Stream.hpp  oddio.h
Source/Tools/: AETlvs.hpp  CMakeLists.txt  EnumType.hpp  JsonDocument.cpp  JsonDocument.hpp  TlvObjectBase.hpp  Tools.cpp  TypesCollection.hpp  alive_api.cpp  alive_api.hpp  vab_tool.cpp
Source/Tools/alive_api/: AEJsonUpgrader.cpp  AETlvs.hpp  AOJsonUpgrader.cpp  AOJsonUpgrader.hpp  AOTlvs.hpp  BasicType.hpp  ByteStream.hpp  CMakeLists.txt  EnumType.hpp  ITypeBase.hpp  JsonDocument.cpp  (+14 more)
Source/relive/: CMakeLists.txt  Exe.cpp  resource.rc
Source/relive_lib/: AddPointer.hpp  AmbientSound.cpp  AmbientSound.hpp  AnimResources.cpp  AnimResources.hpp  Animation.cpp  Animation.hpp  AnimationBase.cpp  AnimationBase.hpp  AnimationUnknown.cpp  AnimationUnknown.hpp  BaseAnimatedWithPhysicsGameObject.cpp  BaseAnimatedWithPhysicsGameObject.hpp  BaseGameAutoPlayer.cpp  BaseGameAutoPlayer.hpp  BaseGameObject.cpp  BaseGameObject.hpp  BinaryPath.cpp  BinaryPath.hpp  CMakeLists.txt  CamDecompressor.cpp  CamDecompressor.hpp  Camera.cpp  Camera.hpp  Clamp.hpp  Collisions.cpp  Collisions.hpp  CommandLineParser.hpp  Compression.cpp  Compression.hpp  CompressionType_4Or5.hpp  DynamicArray.cpp  DynamicArray.hpp  EffectBase.cpp  EffectBase.hpp  Engine.cpp  Engine.hpp  Error.cpp  Error.hpp  Events.cpp  (+71 more)
assets/: CMakeLists.txt  relive  relive-ae  relive-ae.desktop  relive-ao  relive-ao.desktop  relive.desktop
assets/shaders/: texture.fsh  texture.vsh
(+484 files in other folders)
