if(UNIX)
  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/relive" DESTINATION bin/ PERMISSIONS OWNER_WRITE WORLD_READ WORLD_EXECUTE)
  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/relive.png" DESTINATION share/pixmaps/)
  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/relive.desktop" DESTINATION share/applications/)
endif()
