if(UNIX)
  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/relive-ao" DESTINATION bin/ PERMISSIONS WORLD_READ WORLD_EXECUTE)
  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/relive-ae" DESTINATION bin/ PERMISSIONS WORLD_READ WORLD_EXECUTE)
  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/relive.png" DESTINATION share/pixmaps/)
  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/relive-ao.desktop" DESTINATION share/applications/)
  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/relive-ae.desktop" DESTINATION share/applications/)
endif()
