if(UNIX)
  SET(BINPATH "bin")
  install(PROGRAMS "${CMAKE_CURRENT_SOURCE_DIR}/relive-ao" DESTINATION "${BINPATH}")
  install(PROGRAMS "${CMAKE_CURRENT_SOURCE_DIR}/relive-ae" DESTINATION "${BINPATH}")
  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/relive.png" DESTINATION share/pixmaps/)
  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/relive-ao.desktop" DESTINATION share/applications/)
  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/relive-ae.desktop" DESTINATION share/applications/)
endif()
